# level-zero-tests

./: .gitignore  0001-Add-new-CTS-test-to-validate-if-unique-telemetry-is-.patch  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  almost_final_ctsL0.patch  azure-pipelines.yml  basic_features_freeze.csv  clang-format-patch.sh  fabric_error_counter_patch1.patch  l0_cts_july16_compiled.patch  l0_cts_july16_compiled_next_api.patch
conformance_tests/core/: CMakeLists.txt
conformance_tests/core/test_api_interop/: CMakeLists.txt  README.md
conformance_tests/core/test_barrier/: CMakeLists.txt  README.md
conformance_tests/core/test_cl_interop/: CMakeLists.txt  README.md
conformance_tests/core/test_cmdlist/: CMakeLists.txt  README.md
conformance_tests/core/test_cmdqueue/: CMakeLists.txt  README.md
conformance_tests/core/test_context/: CMakeLists.txt  README.md
conformance_tests/core/test_copy/: CMakeLists.txt  README.md
conformance_tests/core/test_device/: CMakeLists.txt  README.md
conformance_tests/core/test_driver/: CMakeLists.txt  README.md
conformance_tests/core/test_event/: CMakeLists.txt  README.md
conformance_tests/core/test_fabric/: CMakeLists.txt
conformance_tests/core/test_fence/: CMakeLists.txt  README.md
conformance_tests/core/test_image/: CMakeLists.txt  README.md
conformance_tests/core/test_ipc/: CMakeLists.txt  README.md
conformance_tests/core/test_memory/: CMakeLists.txt  README.md
conformance_tests/core/test_memory_overcommit/: CMakeLists.txt  README.md
conformance_tests/core/test_module/: CMakeLists.txt  README.md
conformance_tests/core/test_multiprocess/: CMakeLists.txt  README.md
conformance_tests/core/test_multithread/: CMakeLists.txt  README.md
conformance_tests/core/test_mutable_cmdlist/: CMakeLists.txt  README.md
conformance_tests/core/test_p2p/: CMakeLists.txt  README.md
conformance_tests/core/test_prefetch/: CMakeLists.txt  README.md
conformance_tests/core/test_residency/: CMakeLists.txt  README.md
conformance_tests/core/test_sampler/: CMakeLists.txt  README.md
conformance_tests/core/test_template/: CMakeLists.txt  README.md
conformance_tests/core/test_usm/: CMakeLists.txt  README.md
conformance_tests/sysman/: CMakeLists.txt
conformance_tests/sysman/test_sysman_device/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_diagnostics/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_driver/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_ecc/: CMakeLists.txt
conformance_tests/sysman/test_sysman_engine/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_events/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_fabric/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_fan/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_firmware/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_frequency/: CMakeLists.txt
conformance_tests/sysman/test_sysman_init/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_led/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_memory/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_overclocking/: CMakeLists.txt
conformance_tests/sysman/test_sysman_pci/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_performance/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_power/: CMakeLists.txt
conformance_tests/sysman/test_sysman_psu/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_ras/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_scheduler/: CMakeLists.txt
conformance_tests/sysman/test_sysman_standby/: CMakeLists.txt
conformance_tests/sysman/test_sysman_temperature/: CMakeLists.txt  README.md
conformance_tests/sysman/test_sysman_vf_management/: CMakeLists.txt  README.md
conformance_tests/tools/sysman/: CMakeLists.txt
layer_tests/tracing/: CMakeLists.txt  README.md
layer_tests/tracing/src/: main.cpp  test_api_ltracing.cpp  test_api_ltracing_compat.cpp  test_api_ltracing_threading.cpp  test_ltracing_compat_ipc_event_helper.cpp  test_ltracing_ipc_event_helper.cpp
perf_tests/: BUILD.md  CMakeLists.txt  README.md
perf_tests/cl_image_copy/: CMakeLists.txt
perf_tests/cl_image_copy/include/: cl_image_copy.h
perf_tests/cl_image_copy/src/: cl_image_copy.cpp  options.cpp  utils.cpp
perf_tests/common/include/: common.hpp  ze_app.hpp
perf_tests/common/src/: ze_app.cpp
perf_tests/ze_bandwidth/: CMakeLists.txt  README.md
perf_tests/ze_bandwidth/include/: ze_bandwidth.hpp
perf_tests/ze_bandwidth/src/: options.cpp  ze_bandwidth.cpp
perf_tests/ze_cabe/: CMakeLists.txt  README.md
perf_tests/ze_cabe/kernels/: ze_cabe_blackscholes_fp32.cl  ze_cabe_blackscholes_fp32.spv  ze_cabe_blackscholes_fp64.cl  ze_cabe_mandelbrot.cl  ze_cabe_mandelbrot.spv  ze_cabe_simpleadd.cl  ze_cabe_simpleadd.spv  ze_cabe_sobel.cl  ze_cabe_sobel.spv
perf_tests/ze_cabe/src/: ze_cabe.cpp
perf_tests/ze_image_copy/: CMakeLists.txt  README.md
perf_tests/ze_image_copy/include/: ze_image_copy.h
perf_tests/ze_image_copy/src/: options.cpp  ze_image_copy.cpp
perf_tests/ze_nano/: CMakeLists.txt  README.md
perf_tests/ze_nano/include/: api_static_probe.hpp  benchmark.hpp  hardware_counter.hpp
perf_tests/ze_nano/kernels/: ze_nano_benchmarks.cl  ze_nano_benchmarks.spv
perf_tests/ze_nano/src/: api_static_probe.cpp  benchmark.cpp  ze_nano.cpp
perf_tests/ze_peak/: CMakeLists.txt  README.md
perf_tests/ze_peak/include/: common.h  ze_peak.h
perf_tests/ze_peer/: CMakeLists.txt  README.md
perf_tests/ze_pingpong/: CMakeLists.txt  LICENSE  README.md
utils/logging/: CMakeLists.txt
utils/logging/src/: logging.cpp
utils/net/: CMakeLists.txt
utils/random/: CMakeLists.txt
utils/test_harness/: CMakeLists.txt
utils/utils/: CMakeLists.txt
zesysman/: BUILD.md  CMakeLists.txt  Makefile  README.md  setup.py  zes_wrap.i  zesysman  zesysman.i
zesysman/zesys/: __init__.py  arg.py  logger.py  otree.py  output.py  state.py  stub.py  types.py  util.py
(+744 files in other folders)
