# Copyright (C) 2020 Intel Corporation
# SPDX-License-Identifier: MIT

add_subdirectory(test_barrier)
add_subdirectory(test_cmdlist)
add_subdirectory(test_cmdqueue)
add_subdirectory(test_copy)
add_subdirectory(test_context)
add_subdirectory(test_device)
add_subdirectory(test_driver)
add_subdirectory(test_event)
add_subdirectory(test_fence)
add_subdirectory(test_image)
add_subdirectory(test_ipc)
add_subdirectory(test_memory)
add_subdirectory(test_memory_overcommit)
add_subdirectory(test_module)
add_subdirectory(test_p2p)
add_subdirectory(test_residency)
add_subdirectory(test_sampler)
add_subdirectory(test_template)
add_subdirectory(test_usm)
add_subdirectory(test_multithread)
add_subdirectory(test_multiprocess)
