#
# Copyright (C) 2020 Intel Corporation
#
# SPDX-License-Identifier: MIT
#

add_subdirectory(test_pci)
#add_subdirectory(test_frequency)
#add_subdirectory(test_init)
add_subdirectory(test_standby)
add_subdirectory(test_power)
#add_subdirectory(test_sysman_diagnostics)
#add_subdirectory(test_sysman_events)
#add_subdirectory(test_sysman_memory)
#add_subdirectory(test_sysman_fabric)
#add_subdirectory(test_sysman_device)
#add_subdirectory(test_sysman_psu)
#add_subdirectory(test_sysman_fan)
#add_subdirectory(test_sysman_led)
add_subdirectory(test_sysman_ras)
#add_subdirectory(test_sysman_engine)
#add_subdirectory(test_sysman_temperature)
#add_subdirectory(test_sysman_firmware)
#add_subdirectory(test_sysman_overclocking)
#add_subdirectory(test_sysman_scheduler)
